# testagent

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  api.yaml  conftest.py  docker-compose.yml  ocr_api.yaml  pyproject.toml  test.py  test_output.txt  test_recording.py
.claude/: settings.local.json
.opencode/: opencode.json
.opencode/agents/: testcase-leader.md
.opencode/commands/: code.md  gen-testcase.md  plan.md  refine.md
.opencode/skills/testcase-coder/: SKILL.md
.opencode/skills/testcase-planner/: SKILL.md
.opencode/skills/testcase-refiner/: SKILL.md
.qoder/agents/: testcase-leader.md
.qoder/skills/gen-testcase/: SKILL.md
android/: __init__.py  conftest.py
android/pages/: __init__.py  base_page.py  login_page.py
android/steps/: __init__.py  login_steps.py
android/tests/: __init__.py  test_login.py
api/: __init__.py  conftest.py
api/services/: __init__.py  user_service.py
api/steps/: __init__.py  auth_steps.py
api/tests/: __init__.py  test_user_api.py
app/: __init__.py  conftest.py
app/pages/: __init__.py  base_page.py  login_page.py
app/steps/: __init__.py  login_steps.py
app/tests/: __init__.py  test_login.py
common/: __init__.py  assertions.py  base_api.py  config.py  data_factory.py  db.py  ocr_client.py  packaging.py  request_context.py  utils.py
config/: settings.yaml  worker.yaml
installer/: build_installer.ps1  installer.iss  installer.nsi
ios/: __init__.py  conftest.py
ios/pages/: __init__.py  base_page.py
ios/steps/: __init__.py
ios/tests/: __init__.py
ocr_service/: Dockerfile  __init__.py  config.py  requirements.txt  server.py
ocr_service/api/: __init__.py  routes.py  schemas.py
ocr_service/core/: __init__.py  image_matcher.py  ocr_engine.py
ocr_service/models/: __init__.py  match_result.py  ocr_result.py
ocr_service/utils/: __init__.py  image_utils.py
rust/windows-screen-sidecar/: Cargo.toml
rust/windows-screen-sidecar/src/: capture.rs  main.rs  protocol.rs  session.rs
rust/windows-screen-sidecar/src/win_recorder/: bgra_to_nv12.rs  d3d11.rs  error.rs  h264_encoder.rs  memory_byte_stream.rs  mf_writer.rs  mod.rs  recorder.rs  watermark.rs
scripts/: build.bat  build_mac.sh  build_windows.bat  build_windows.ps1  cv2_hook.py  pyinstaller.spec  runtime_hook_subprocess_hide_window.py
test_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_config_path.py  test_config_update.py  test_host_discovery.py  test_log_query.py  test_region_support.py  test_single_instance.py  test_tools.py  test_upgrade_manager.py
tests/upgrade/: __init__.py  test_downloader.py  test_handler.py  test_installer.py  test_models.py  test_state.py
tools/: download_install.ps1  play_ppt.ps1  start_app.ps1  start_app.sh
tools/ffmpeg/: .gitkeep
tools/hdc/: README.md
web/: __init__.py  conftest.py
web/pages/: __init__.py  base_page.py  login_page.py
web/remote/: __init__.py  actions.py  browser.py  logger.py  page.py  result.py  screenshot.py  server.py  session.py  task.py  worker.py
web/steps/: __init__.py  login_steps.py
web/tests/: __init__.py  test_login.py
windows/: __init__.py  conftest.py
windows/pages/: __init__.py  base_page.py
windows/steps/: __init__.py
windows/tests/: __init__.py
worker/: __init__.py  config.py  device_monitor.py  download_dialog.py  gui_main.py  log_query.py  logger.py  main.py  performance_monitor.py  server.py  settings_window.py  single_instance.py  tools.py  tray_manager.py  upgrade_manager.py  worker.py
worker/actions/: __init__.py  base.py  cmd_exec.py  coordinate.py  gesture.py  image.py  ocr.py  position.py  recording.py  registry.py  unlock.py  web_token.py  window.py
worker/discovery/: __init__.py  android.py  harmony.py  host.py  ios.py
worker/reporter/: __init__.py  client.py  models.py
worker/screen/: __init__.py  frame_source.py  h264_streamer.py  manager.py  mjpeg_proxy.py  monitor_utils.py  recorder.py  streamer.py  windows_sidecar.py
worker/task/: __init__.py  action.py  result.py  store.py  task.py
worker/upgrade/: __init__.py  downloader.py  handler.py  installer.py  models.py  state.py
(+62 files in other folders)
