[project]
name = "test-worker"
version = "2.0.0"
description = "多端自动化测试执行基建 - Worker"
requires-python = ">=3.10"
dependencies = [
    # HTTP 服务
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",

    # Web 平台
    "playwright==1.58.0",

    # 移动端平台
    "uiautomator2>=3.0",
    "wda>=0.3.0",  # iOS WDA Python 客户端

    # 桌面平台 (Windows/Mac)
    "pyautogui>=0.9.54",
    "mss>=9.0.0",
    "psutil>=5.9.0",
    "Pillow>=10.0.0",
    "pywin32>=306",  # Windows 窗口查找和截图

    # 图像匹配
    "opencv-python-headless>=4.8.0",

    # 工具
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pyperclip>=1.8.0",

    # GUI 组件
    "pystray>=0.19.0",
    "PyQt5>=5.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
test-worker = "worker.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["worker*", "common*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as an asyncio test",
]