[package]
name = "windows-screen-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows APIs
windows = { version = "0.58", features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Media_MediaFoundation",
    "Win32_Media_Audio",
    "Win32_Graphics",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Variant",
] }

# 同步原语
parking_lot = "0.12"
anyhow = "1.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
windows-implement = "0.58"